--- a/style.css
+++ b/style.css
@@ -35,6 +35,114 @@ body {
   background: #ebf7ff;
 }
 
+.template-slider__modal {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4);
+  top: 0;
+  left: 0;
+  z-index: 99;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transition: 0.4s ease-in-out;
+  transition: 0.4s ease-in-out;
+}
+
+.template-slider__modal.open {
+  opacity: 1;
+  visibility: visible;
+}
+
+.template-slider__modal__inner {
+  width: 631px;
+  background: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 12px;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  position: relative;
+}
+
+.template-slider__modal__close {
+  background: #9199b4;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  top: 24px;
+  right: 24px;
+  position: absolute;
+  cursor: pointer;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.template-slider__modal__close .icon {
+  width: 20px;
+  height: 20px;
+}
+
+.template-slider__modal__title {
+  margin: 64px 0 0;
+  font-size: 18px;
+  line-height: 26px;
+  color: #0e215e;
+}
+
+.template-slider__modal__actions {
+  margin: 48px 0 64px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.template-slider__modal__btn {
+  width: 168px;
+  height: 50px;
+  border-radius: 8px;
+  border: none;
+  cursor: pointer;
+  font-family: NotoSemiBold;
+  font-size: 16px;
+}
+
+.template-slider__modal__btn--yes {
+  background: transparent;
+  -webkit-box-shadow: 0px 10px 20px #0099ff1a;
+          box-shadow: 0px 10px 20px #0099ff1a;
+  border: 1px solid #b1b7ca;
+  margin-right: 40px;
+}
+
+.template-slider__modal__btn--no {
+  background: #ee2a7b;
+  color: white;
+}
+
 .template-slider__container {
   width: 77%;
   background: white;
@@ -124,7 +232,7 @@ body {
 }
 
 .template-slide__header__title {
-  font-family: NotoMedium, sans-serif;
+  font-family: NotoBold, sans-serif;
 }
 
 .template-slide__header__date {
@@ -174,6 +282,7 @@ body {
   position: relative;
   color: #292562;
   padding-left: 14px;
+  margin-bottom: 4px;
 }
 
 .template-slide__content__list .list-item:before {
