--- a/style.scss
+++ b/style.scss
@@ -18,6 +18,8 @@
   src: url("/fonts/NotoSansGeorgian-Bold.ttf");
 }
 
+$notoSemiBold: NotoSemiBold;
+
 * {
   margin: 0;
   padding: 0;
@@ -30,6 +32,81 @@
 body {
   margin-top: 150px;
   background: #ebf7ff;
+}
+.template-slider__modal {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4);
+  top: 0;
+  left: 0;
+  z-index: 99;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.4s ease-in-out;
+  &.open {
+    opacity: 1;
+    visibility: visible;
+  }
+  &__inner {
+    width: 631px;
+    background: white;
+    display: flex;
+    align-items: center;
+    border-radius: 12px;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+  }
+  &__close {
+    background: #9199b4;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    top: 24px;
+    right: 24px;
+    position: absolute;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .icon {
+      width: 20px;
+      height: 20px;
+    }
+  }
+  &__title {
+    margin: 64px 0 0;
+    font-size: 18px;
+    line-height: 26px;
+    color: #0e215e;
+  }
+  &__actions {
+    margin: 48px 0 64px;
+    display: flex;
+  }
+  &__btn {
+    width: 168px;
+    height: 50px;
+    border-radius: 8px;
+    border: none;
+    cursor: pointer;
+    font-family: $notoSemiBold;
+    font-size: 16px;
+    &--yes {
+      background: transparent;
+      box-shadow: 0px 10px 20px #0099ff1a;
+      border: 1px solid #b1b7ca;
+      margin-right: 40px;
+    }
+    &--no {
+      background: #ee2a7b;
+      color: white;
+    }
+  }
 }
 .template-slider__container {
   width: 77%;
@@ -104,7 +181,7 @@ body {
       color: #292562;
     }
     &__title {
-      font-family: NotoMedium, sans-serif;
+      font-family: NotoBold, sans-serif;
     }
     &__date {
       font-family: NotoRegular, sans-serif;
@@ -151,6 +228,7 @@ body {
         position: relative;
         color: #292562;
         padding-left: 14px;
+        margin-bottom: 4px;
         &:before {
           content: "";
           width: 6px;
