--- a/style.css
+++ b/style.css
@@ -190,6 +190,45 @@ body {
   background: transparent linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, white 100%) 0% 0% no-repeat padding-box;
 }
 
+.template-slider__empty {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.template-slider__empty .icon {
+  width: 66px;
+  height: 66px;
+}
+
+.template-slider__empty .icon img {
+  width: 100%;
+  height: 100%;
+}
+
+.template-slider__empty .text-block {
+  text-align: center;
+  font-size: 18px;
+  line-height: 30px;
+  margin-top: 24px;
+}
+
+.template-slider__empty .text-block__title {
+  color: #292562;
+}
+
+.template-slider__empty .text-block__text {
+  color: #9199b4;
+  padding: 0 15%;
+}
+
 .template-slide {
   width: 383px;
   height: 403px;
@@ -413,5 +452,50 @@ body {
 .swiper-horizontal > .swiper-pagination-bullets,
 .swiper-pagination-bullets.swiper-pagination-horizontal {
   bottom: 32px;
+}
+
+.template-request {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  background: white;
+  padding: 40px 72px;
+  -webkit-box-shadow: 0px 10px 30px #0099ff12;
+          box-shadow: 0px 10px 30px #0099ff12;
+  border-radius: 8px;
+  width: 77%;
+  margin: 38px auto 0;
+}
+
+.template-request .icon {
+  margin-right: 45px;
+}
+
+.template-request__text {
+  font-family: NotoSemiBold;
+  font-size: 18px;
+  line-height: 30px;
+  color: #292562;
+}
+
+.template-request__text a {
+  color: #ee2a7b;
+  text-decoration: none;
+}
+
+.template-request__btn {
+  padding: 16px 46px;
+  background: #ee2a7b;
+  border-radius: 8px;
+  font-size: 16px;
+  text-decoration: none;
+  color: white;
+  white-space: nowrap;
 }
 /*# sourceMappingURL=style.css.map */
