--- a/style.scss
+++ b/style.scss
@@ -154,6 +154,32 @@ body {
       )
       0% 0% no-repeat padding-box;
   }
+  &__empty {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    .icon {
+      width: 66px;
+      height: 66px;
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
+    .text-block {
+      text-align: center;
+      font-size: 18px;
+      line-height: 30px;
+      margin-top: 24px;
+      &__title {
+        color: #292562;
+      }
+      &__text {
+        color: #9199b4;
+        padding: 0 15%;
+      }
+    }
+  }
 }
 .template-slide {
   width: 383px;
@@ -324,4 +350,38 @@ body {
 .swiper-horizontal > .swiper-pagination-bullets,
 .swiper-pagination-bullets.swiper-pagination-horizontal {
   bottom: 32px;
+}
+
+.template-request {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: white;
+  padding: 40px 72px;
+  box-shadow: 0px 10px 30px #0099ff12;
+  border-radius: 8px;
+  width: 77%;
+  margin: 38px auto 0;
+  .icon {
+    margin-right: 45px;
+  }
+  &__text {
+    font-family: $notoSemiBold;
+    font-size: 18px;
+    line-height: 30px;
+    color: #292562;
+    a {
+      color: #ee2a7b;
+      text-decoration: none;
+    }
+  }
+  &__btn {
+    padding: 16px 46px;
+    background: #ee2a7b;
+    border-radius: 8px;
+    font-size: 16px;
+    text-decoration: none;
+    color: white;
+    white-space: nowrap;
+  }
 }
