--- a/style.scss
+++ b/style.scss
@@ -301,6 +301,7 @@ body {
       text-decoration: none;
       cursor: pointer;
       font-family: NotoSemiBold, sans-serif;
+      font-size: 15px;
     }
   }
   &__arrow {
@@ -374,7 +375,7 @@ body {
     font-size: 18px;
     line-height: 30px;
     color: #292562;
-    margin-right: 40px;
+    margin-right: 130px;
     a {
       color: #ee2a7b;
       text-decoration: none;
