--- a/style.css
+++ b/style.css
@@ -150,6 +150,8 @@ body {
   padding: 32px 0 72px 32px;
   margin: 0 auto;
   position: relative;
+  -webkit-box-shadow: 0px 10px 30px #0099ff0d;
+          box-shadow: 0px 10px 30px #0099ff0d;
 }
 
 .template-slider {
