--- a/style.scss
+++ b/style.scss
@@ -115,6 +115,7 @@ body {
   padding: 32px 0 72px 32px;
   margin: 0 auto;
   position: relative;
+  box-shadow: 0px 10px 30px #0099ff0d;
 }
 .template-slider {
   width: 100%;
