--- a/style.scss
+++ b/style.scss
@@ -489,6 +489,9 @@ body {
   border-radius: 8px;
   width: 77%;
   margin: 38px auto 0;
+  @media (max-width: 1580px) {
+    padding: 30px;
+  }
   @media (max-width: 1080px) {
     padding: 24px 16px;
     width: 100%;
@@ -497,8 +500,11 @@ body {
     align-items: center;
   }
   .icon {
-    margin-right: 45px;
-    @media (max-width: 992px) {
+    margin: 0 45px 0 0;
+    @media (max-width: 1580px) {
+      margin: 0 20px 0 0;
+    }
+    @media (max-width: 1080px) {
       margin: 0 0 20px 0;
     }
   }
@@ -508,6 +514,11 @@ body {
     line-height: 30px;
     color: #292562;
     margin-right: 130px;
+    @media (max-width: 1580px) {
+      margin-right: 16px;
+      font-size: 16px;
+      line-height: 26px;
+    }
     @media (max-width: 1080px) {
       font-size: 14px;
       line-height: 22px;
